syntax = "proto3";

package grassdb;

option go_package = "github.com/ranjan42/grassdb/proto;proto";

service Database {
    rpc Get (GetRequest) returns (GetResponse);
    rpc Set (SetRequest) returns (SetResponse);

    // Raft Consensus RPCs
    rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse);
    rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
    bool found = 2;
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetResponse {
    bool success = 1;
    string leader_id = 2; // Redirect to leader if not leader
    string error = 3;
}

// Raft Messages

message LogEntry {
    int64 term = 1;
    string key = 2;
    string value = 3;
}

message RequestVoteRequest {
    int64 term = 1;
    string candidate_id = 2;
    int64 last_log_index = 3;
    int64 last_log_term = 4;
}

message RequestVoteResponse {
    int64 term = 1;
    bool vote_granted = 2;
}

message AppendEntriesRequest {
    int64 term = 1;
    string leader_id = 2;
    int64 prev_log_index = 3;
    int64 prev_log_term = 4;
    repeated LogEntry entries = 5;
    int64 leader_commit = 6;
}

message AppendEntriesResponse {
    int64 term = 1;
    bool success = 2;
}
